Fixed the bug in screen sizes under 576px had a horizontal scrollbar of 2 extra pixels. The issue was in home.css.

--- a/client/src/css/styles.css
+++ b/client/src/css/styles.css
@@ -32,7 +32,6 @@ body {
         max-width: 544px;
         margin-top: 1.5rem;
         margin-bottom: 1.5rem;
-        border: 1px solid #999999;
     }
 }
 
